syntax = "proto3";

package messari.common.v1;

message ERC20Tokens {
  repeated ERC20Token items = 1;
}

message ERC20Token {
  string address = 1;
  string name = 2;
  string symbol = 3;
  uint64 decimals = 4;
}

message Transaction {
  bytes hash = 1;
  uint64 nonce = 2;
  uint64 block_number = 3;
  uint64 block_timestamp = 4;
  string gas_price = 5; // BigInt, in wei
  uint64 gas_limit = 6;
}
